// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VListTile.vue should render <div> with <a> when using href prop 1`] = `

<div>
  <a href="http://www.google.com"
     class="list__tile list__tile--link"
  >
  </a>
</div>

`;

exports[`VListTile.vue should render <div> with <button> when using to prop 1`] = `

<div>
  <button class="list__tile list__tile--link">
  </button>
</div>

`;

exports[`VListTile.vue should render with a div when href and to are not used 1`] = `

<div>
  <div class="list__tile">
  </div>
</div>

`;
